compiler/src/snapshots/tests__parse_string.snap
---
source: compiler/src/parser.rs
expression: "\"hello\""
---
Ok(
    Module {
        start: 0,
        end: 6,
        body: [
            StringLiteral {
                start: 1,
                end: 6,
                value: "hello",
                inferred_type: Unknown,
            },
        ],
    },
)
