compiler/src/snapshots/tests__parse_string_with_interpolation.snap
---
source: compiler/src/parser.rs
expression: "\"hello $(name)!\""
---
Parsed(
    Module {
        body: [
            StringInterpolation {
                line_start: 0,
                line_end: 0,
                col_start: 0,
                col_end: 7,
                parts: [
                    StringLiteral {
                        line_start: 0,
                        line_end: 0,
                        col_start: 0,
                        col_end: 7,
                        value: "hello ",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        line: 0,
                        col_start: 9,
                        col_end: 13,
                        name: "name",
                        inferred_type: Unknown,
                    },
                    StringLiteral {
                        line_start: 0,
                        line_end: 0,
                        col_start: 14,
                        col_end: 16,
                        value: "!",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
