compiler/src/snapshots/tests__parse_string_with_nested_interpolation.snap
---
source: compiler/src/parser.rs
expression: "\"hello $(\"aa $(name) bb\")!\""
---
Parsed(
    Module {
        body: [
            StringInterpolation {
                line_start: 0,
                line_end: 0,
                col_start: 0,
                col_end: 7,
                parts: [
                    StringLiteral {
                        line_start: 0,
                        line_end: 0,
                        col_start: 0,
                        col_end: 7,
                        value: "hello ",
                        inferred_type: Unknown,
                    },
                    StringInterpolation {
                        line_start: 0,
                        line_end: 0,
                        col_start: 9,
                        col_end: 13,
                        parts: [
                            StringLiteral {
                                line_start: 0,
                                line_end: 0,
                                col_start: 9,
                                col_end: 13,
                                value: "aa ",
                                inferred_type: Unknown,
                            },
                            Identifier {
                                line: 0,
                                col_start: 15,
                                col_end: 19,
                                name: "name",
                                inferred_type: Unknown,
                            },
                            StringLiteral {
                                line_start: 0,
                                line_end: 0,
                                col_start: 20,
                                col_end: 24,
                                value: " bb",
                                inferred_type: Unknown,
                            },
                        ],
                        inferred_type: Unknown,
                    },
                    StringLiteral {
                        line_start: 0,
                        line_end: 0,
                        col_start: 25,
                        col_end: 27,
                        value: "!",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
        comments: {},
    },
)
