compiler/src/snapshots/tests__string_tokens_without_interpolations.snap
---
source: compiler/src/tokenizer.rs
expression: "\"hello\" \"\" \"world\""
---
[
    String {
        line_start: 0,
        col_start: 0,
        line_end: 0,
        col_end: 7,
        value: [
            104,
            101,
            108,
            108,
            111,
        ],
    },
    String {
        line_start: 0,
        col_start: 8,
        line_end: 0,
        col_end: 10,
        value: [],
    },
    String {
        line_start: 0,
        col_start: 11,
        line_end: 0,
        col_end: 18,
        value: [
            119,
            111,
            114,
            108,
            100,
        ],
    },
]
