compiler/src/snapshots/tests__tokenize_binary_numbers.snap
---
source: compiler/src/tokenizer.rs
expression: 0b101 0b00 0b1 0B0 0b00100
---
Tokenized(
    [
        BinaryDigits {
            start: 0,
            end: 5,
            value: [
                48,
                98,
                49,
                48,
                49,
            ],
        },
        BinaryDigits {
            start: 6,
            end: 10,
            value: [
                48,
                98,
                48,
                48,
            ],
        },
        BinaryDigits {
            start: 11,
            end: 14,
            value: [
                48,
                98,
                49,
            ],
        },
        BinaryDigits {
            start: 15,
            end: 18,
            value: [
                48,
                66,
                48,
            ],
        },
        BinaryDigits {
            start: 19,
            end: 26,
            value: [
                48,
                98,
                48,
                48,
                49,
                48,
                48,
            ],
        },
    ],
    {},
)
