compiler/src/snapshots/tests__tokenize_comment_after.snap
---
source: compiler/src/tokenizer.rs
expression: "ok \n\n#comment"
---
Ok(
    (
        [
            Identifier(
                0,
                2,
            ),
            LineBreak(
                3,
                4,
            ),
            LineBreak(
                4,
                5,
            ),
        ],
        {
            2: Comment(
                6,
                13,
            ),
        },
    ),
)
