compiler/src/snapshots/tests__tokenize_comment_before.snap
---
source: compiler/src/tokenizer.rs
expression: "# comment \nok"
---
Ok(
    [
        LineBreak {
            start: 10,
            end: 11,
        },
        Identifier {
            start: 11,
            end: 13,
            value: [
                111,
                107,
            ],
        },
    ],
    {
        0: [
            32,
            99,
            111,
            109,
            109,
            101,
            110,
            116,
            32,
        ],
    },
)
