compiler/src/snapshots/tests__tokenize_comment_same_line.snap
---
source: compiler/src/tokenizer.rs
expression: "ok #comment"
---
Ok(
    [
        Identifier {
            line: 0,
            col: 0,
            value: [
                111,
                107,
            ],
        },
    ],
    {
        0: [
            99,
            111,
            109,
            109,
            101,
            110,
            116,
        ],
    },
)
