compiler/src/snapshots/tests__tokenize_empty.snap
---
source: compiler/src/tokenizer.rs
expression: ""
---
Ok(
    (
        [],
        {},
    ),
)
